--- a/register.html
+++ b/register.html
@@ -3,15 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng nhập</title>
+    <title>Đăng ký</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        .nav-brand a {
-            color: #FF6B00;
-            text-decoration: none;
-            font-size: 24px;
-            font-weight: bold;
-        }
         .fast-cat-title {
             color: #FF6B00;
             text-align: center;
@@ -23,9 +17,9 @@
 </head>
 <body>
     <div class="login-container">
-        <form id="loginForm" class="login-form">
+        <form id="registerForm" class="login-form">
             <h1 class="fast-cat-title">Fast Cat</h1>
-            <!-- <h2 class="login-title">Đăng nhập</h2> -->
+            <!-- <h2 class="login-title">Đăng ký tài khoản</h2> -->
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
@@ -34,14 +28,14 @@
                 <label for="password">Mật khẩu:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <div class="form-group checkbox">
-                <input type="checkbox" id="remember" name="remember">
-                <label for="remember">Ghi nhớ đăng nhập</label>
+            <div class="form-group">
+                <label for="confirmPassword">Xác nhận mật khẩu:</label>
+                <input type="password" id="confirmPassword" name="confirmPassword" required>
             </div>
-            <button type="submit" class="login-btn">Đăng nhập</button>
+            <button type="submit" class="login-btn">Đăng ký</button>
         </form>
         <div class="register-text">
-            <p>Nếu chưa có tài khoản hãy đăng ký tại đây <a href="register.html">Đăng ký</a></p>
+            <p>Đã có tài khoản? <a href="index.html">Đăng nhập</a></p>
         </div>
     </div>
     <script src="script.js"></script>
